# Optmization_Fusion

./: README.md
example_qt/: CMakeLists.txt  main.cpp  mainwindow.ui
example_time_optimal_car/: CMakeLists.txt  README.md
example_time_optimal_car/Examples/: TestAstar.cc  TestQt.cc  TestWindow.cc  test.cc  test_map.cc
example_time_optimal_car/include/: Astar2d.h  Initializer.h  Map.h  Model.h  mainwindow.h  mapwidget.h
example_time_optimal_car/src/: Astar2d.cc  Initializer.cc  Map.cc  Model.cc  mainwindow.cpp  mainwindow.h
hybrid-astar-planner/: CMakeLists.txt  README.md
hybrid-astar-planner/include/: Gui.hpp  Utils.hpp
hybrid-astar-planner/src/: Compare.cpp  Gui.cpp  Map.cpp  State.cpp
notebook/: review.md
notebook/SequentialConvexOptmizationSJTU/: README.md
qt_learning/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapwidget.cpp  mapwidget.h
